2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Face_stats.cc: fixed division by zero
	* shapes/Makefile.am: new automakes don't support OMIT_DEPENDENCIES

2002-10-31  Jeff Freedman  <jeff@amy.nerble.net>

	* configure.in:  Version 1.00.

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-10  Max Horn  <max@quendi.de>

	* synced with my recent (and some not so recent) changes to HEAD CVS:
	all of these are there to get exult to compile on MacOS X again

2002-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc,pathfinder/*:  Integrated changes from 1.1x to fix
	start of Mtns. of Freedom bug.

2002-09-11  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated and/or spellchecked
	* docs/*.html: updated and/or spellchecked
	* FAQ, ReadMe : updated and spellchecked

2002-08-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/*: backported unicode conversion for savegame gumps
	* tools/Makefile.am: don't build ucdump anymore

2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* exult.cc: little correction of the --help screen (--bg, --si instead of 
	  -bg -si)
	* Readme, FAQ: updated.
	* docs/xml/docs.xml, faq.xml: updated
	* docs/readme.html, faq.html: updated

2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
	* configure.in: check for sys/wait.h, signal.h (see above)

2002-07-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.*, exult.cc: added -c option for alternate config files