@@ -2,8 +2,8 @@ if GNOME_INSTALLED
 gnomeappicondir = $(datadir)/pixmaps
 gnomeappicon_DATA = exult.png
 
-gnomeappdir = $(datadir)/gnome/apps/Games
-gnomeapp_DATA = exult.desktop
+#gnomeappdir = $(datadir)/gnome/apps/Games
+#gnomeapp_DATA = exult.desktop
 endif
 
 EXTRA_DIST = \
